2006-05-19 Roy Rankin <rrankin@ihug.com.au>
	* src/14bit-tmrs.cc: TMR2 counts down not up, period wrong,
	  fix 2 PWM with same duty cycle
	* src/p16f8x.cc: CCP1 pin determined by confguration word
	* src/p16x6x.cc: fix core dump for CCP2

2006-05-17 Scott Dattalo <scott@dattalo.com>
	* regression/run_regression.sh: added regression test for ccp
	peripheral. This test only tests capture modes for the CMCON
	settings of 4,5,6, and 7.
	* regression/16f877a.lkr, regression/ccp_877a.asm,
	regression/ccp_877a.stc, regression/Makefile: new files for the
	ccp regression test.

2006-05-14 Borut Razem <borut.razem@siol.net>

	* src/makefile.mingw, src/vcproj: added 16f87 and 16f88 processors
	* modules/makefile.mingw: added i2c-eeprom
	* src/p12x.cc: removed unused variable
	* src/i2c-ee.cc: fixed warning:
	  In member function `virtual bool I2C_EE::processCommand(unsigned int)':
	  warning: control reaches end of non-void function;
	  fixed MSVCcompilation
	* plat/win32/libgpsim.def: MSVC sync

2006-05-14 Scott Dattalo <scott@dattalo.com>
	* src/value.h, src/value.cc, src/expr.cc: Expressions derived from
	the base gpsim types (like Integer, Float) were not getting
	evaluated properly.

2006-05-14 Roy Rankin <rrankin@ihug.com.au>
	* regression/a2d/p16f874a.asm, regression/a2d/p16c71.asm,
	  regression/a2d/16f871.lkr, regression/a2d/16f874a.lkr,
	  regression/a2d/p18f452.asm, regression/a2d/p16f88.asm,
	  regression/a2d/p16f871.asm, regression/a2d/Makefile,
	  regression/a2d/p16f873a.asm, regression/run_regression.sh,
	  src/p16f87x.cc, src/p16f87x.h, src/16bit-processors.cc,
	  src/p16f62x.cc, src/p16x7x.cc, src/p18x.cc, src/a2dconverter.cc:
	- tests and correction to a2d for various processors

2006-05-14 Roy Rankin <rrankin@ihug.com.au>
	* src/16bit-registers.h, src/14bit-registers.h, src/pic-processor.cc,
	  src/Makefile.am, src/pic-processor.h, src/14bit-registers.cc,
	  src/p16f8x.h, src/p16f8x.cc,
	  regression/a2d/Makefile, regression/run_regression.sh,